map location pointer

--- a/test/registration.html
+++ b/test/registration.html
@@ -44,22 +44,22 @@
     >
       <form>
         <label for="fullname" class="form-label">Name: </label>
-        <input type="text" name="fullname" id="fullname" class="form-control" />
+        <input type="text" name="fullname" id="fullname" class="form-text form-control" />
         <br />
         <label for="college" class="form-label">College: </label>
-        <input type="text" name="college" id="college" />
+        <input type="text" name="college" id="college" class="form-control form-text" />
         <br /><label for="branch" class="form-label">Branch: </label>
-        <input type="text" name="branch" id="branch" />
+        <input type="text" name="branch" id="branch" class="form-control form-text"/>
         <br /><label for="sem" class="form-label">Semester: </label>
-        <input type="text" name="sem" id="sem" />
+        <input type="text" name="sem" id="sem" class="form-control form-text"/>
         <br /><label for="pno" class="form-label">Phone: </label>
-        <input type="number" name="pno" id="pno" />
+        <input type="number" name="pno" id="pno" class="form-control" />
         <br />
         <label for="email" class="form-label">E-mail: </label>
-        <input type="email" name="email" id="email" />
+        <input type="email" name="email" id="email" class="form-control form-text"/>
         <br />
         <label for="gen" class="form-label">Gender: </label>
-        <input type="radio" name="gen" id="gen" /> Male
+        <input type="radio" name="gen" id="gen"/> Male
         <input type="radio" name="gen" id="gen" /> Fe-male
         <br />
         <label for="coursename" class="form-label">Couse Name: </label>
