--- a/javascript/map/index.html
+++ b/javascript/map/index.html
@@ -16,43 +16,74 @@
     />
   </head>
   <body>
-    <div>
-      <select
-        name="place"
-        id="place"
-        class="ms-3 mt-2 form-select w-25 d-inline-block"
-        onchange="show()"
-      >
-        <option selected>select please</option>
-        <option>delhi</option>
-        <option>kolkata</option>
-        <option>chennai</option>
-        <option>mumbai</option>
-        <option>madhaya pradesh</option>
-      </select>
-      <!-- <input
+    <header class="bg-success bg-gradient" style="height: 60px">
+      <h1 class="text-center text-light">India State And Capital</h1>
+    </header>
+    <main class="bg-info">
+      <div class="">
+        <select
+          name="place"
+          id="place"
+          class="mt-2 mb-2 form-select w-25 text-center d-inline-block"
+          style="margin-left: 35%"
+          onchange="show()"
+        >
+          <option selected>select please</option>
+          <option>Andhra Pradesh</option>
+          <option>Bihar</option>
+          <option>Chattisgarh</option>
+          <option>Delhi</option>
+          <option>Goa</option>
+          <option>Gujarat</option>
+          <option>Haryana</option>
+          <option>Himachal Pradesh</option>
+          <option>Jharkhand</option>
+          <option>Karnataka</option>
+          <option>Kerala</option>
+          <option>Madhya Pradesh</option>
+          <option>Maharashtra</option>
+          <option>Punjab</option>
+          <option>Odisha</option>
+          <option>Rajasthan</option>
+          <option>Tamil Nadu</option>
+          <option>Telangana</option>
+          <option>Uttarakhand</option>
+          <option>Uttar Pradesh</option>
+          <option>West Bengal</option>
+        </select>
+        <!-- <input
         type="text"
         name="place"
         id="place"
         class="form-text form-control w-25 d-inline-block"
       /> -->
-      <button
-        class="btn btn-outline-danger ms-2 d-inline"
-        onclick="refresh()"
-        id="clear"
-      >
-        Clear
-      </button>
-    </div>
-    <div class="mt-3 d-flex" id="map" style="width: fit-content">
-      <div class="border border-black" id="mapimg">
-        <img src="Map.jpg" alt="map" class="object-fit-cover" id="location" />
+        <button
+          class="btn btn-danger ms-2 d-inline-block"
+          onclick="refresh()"
+          id="clear"
+        >
+          Clear
+        </button>
       </div>
-      <!-- <i
+      <div
+        class="mt-2 mx-auto"
+        id="map"
+        style="width: fit-content; height: 519px"
+      >
+        <div class="border border-black" id="mapimg">
+          <img
+            src="Map.jpg"
+            alt="map"
+            style="height: 500px; width: 100%"
+            id="location"
+          />
+        </div>
+        <!-- <i
         class="bi bi-geo-alt fs-3 position-absolute"
         style="margin-top: 350px; margin-left: 350px"
       ></i> -->
-    </div>
+      </div>
+    </main>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
