--- a/javascript/map/index.html
+++ b/javascript/map/index.html
@@ -16,10 +16,13 @@
     />
   </head>
   <body>
-    <header class="bg-success bg-gradient" style="height: 60px">
+    <header
+      class="bg-success bg-gradient position-sticky top-0"
+      style="height: 60px"
+    >
       <h1 class="text-center text-light">India State And Capital</h1>
     </header>
-    <main class="bg-info">
+    <main class="bg-info" style="height: 100vh">
       <div class="">
         <select
           name="place"
@@ -29,26 +32,40 @@
           onchange="show()"
         >
           <option selected>select please</option>
+          <option>Andaman and Nicobar</option>
           <option>Andhra Pradesh</option>
+          <option>Arunachal Pradesh</option>
+          <option>Assam</option>
           <option>Bihar</option>
+          <option>Chandigarh</option>
           <option>Chattisgarh</option>
+          <option>Daman and Diu</option>
           <option>Delhi</option>
           <option>Goa</option>
           <option>Gujarat</option>
           <option>Haryana</option>
           <option>Himachal Pradesh</option>
+          <option>Jammu and Kashmir</option>
           <option>Jharkhand</option>
           <option>Karnataka</option>
           <option>Kerala</option>
+          <option>Ladhak</option>
           <option>Madhya Pradesh</option>
           <option>Maharashtra</option>
-          <option>Punjab</option>
+          <option>Manipur</option>
+          <option>Meghalaya</option>
+          <option>Mizoram</option>
+          <option>Nagaland</option>
           <option>Odisha</option>
+          <option>Puducherry</option>
+          <option>Punjab</option>
           <option>Rajasthan</option>
+          <option>Sikkim</option>
           <option>Tamil Nadu</option>
           <option>Telangana</option>
-          <option>Uttarakhand</option>
+          <option>Tripura</option>
           <option>Uttar Pradesh</option>
+          <option>Uttarakhand</option>
           <option>West Bengal</option>
         </select>
         <!-- <input
@@ -64,13 +81,20 @@
         >
           Clear
         </button>
+        <button class="btn btn-success" onclick="add()">Add All</button>
+        <button onclick="toggleSound()" id="soundBtn" class="btn btn-light">🔊 Sound On</button>
+        <audio id="pinSound" src="bell-ring-390294.mp3" preload="auto"></audio>
       </div>
       <div
         class="mt-2 mx-auto"
         id="map"
-        style="width: fit-content; height: 519px"
+        style="width: fit-content; height: fit-content"
       >
-        <div class="border border-black" id="mapimg">
+        <div
+          class="border border-black"
+          id="mapimg"
+          style="height: fit-content"
+        >
           <img
             src="Map.jpg"
             alt="map"
