--- a/javascript/map/index.html
+++ b/javascript/map/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Geoloaction</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,13 +14,18 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
+    <link rel="icon" type="image/png" href="favicon-32x32.png" />
+    <link rel="shortcut icon" href="favicon-32x32.png" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="android-chrome-192x192.png" />
   </head>
   <body>
     <header
       class="bg-success bg-gradient position-sticky top-0"
       style="height: 60px"
     >
-      <h1 class="text-center text-light">India State And Capital</h1>
+      <h2 class="text-center text-light">
+        India State And Capital And Union Territories
+      </h2>
     </header>
     <main class="bg-info" style="height: 100vh">
       <div class="">
@@ -82,7 +87,9 @@
           Clear
         </button>
         <button class="btn btn-success" onclick="add()">Add All</button>
-        <button onclick="toggleSound()" id="soundBtn" class="btn btn-light">🔊 Sound On</button>
+        <button onclick="toggleSound()" id="soundBtn" class="btn btn-light">
+          🔊 Sound On
+        </button>
         <audio id="pinSound" src="bell-ring-390294.mp3" preload="auto"></audio>
       </div>
       <div
