--- a/test/index.html
+++ b/test/index.html
@@ -21,8 +21,8 @@
       <div class="navbar">
         <a href="index.html" id="links">Home</a>
         <a href="couse.html" id="links">Courses</a>
-        <a href="" id="links">About</a>
-        <a href="" id="links">Contact</a>
+        <a href="about.html" id="links">About</a>
+        <a href="contact.html" id="links">Contact</a>
       </div>
       <div id="btn1">
         <button id="l">Login</button>
@@ -45,5 +45,6 @@
       </div>
       <div id="btn2"><button id="gets">Get Started</button></div>
     </main>
+    <div id="img"><img src="image.png" alt="" /></div>
   </body>
 </html>
