--- a/test/registration.html
+++ b/test/registration.html
@@ -21,10 +21,10 @@
         />
       </div>
       <div class="navbar">
-        <a href="" id="links">Home</a>
-        <a href="" id="links">Courses</a>
-        <a href="" id="links">About</a>
-        <a href="" id="links">Contact</a>
+        <a href="index.html" id="links">Home</a>
+        <a href="couse.html" id="links">Courses</a>
+        <a href="about.html" id="links">About</a>
+        <a href="contact.html" id="links">Contact</a>
       </div>
       <div id="btn1">
         <button id="l">Login</button>
@@ -63,7 +63,7 @@
         <input type="radio" name="gen" id="gen" /> Fe-male
         <br />
         <label for="coursename" class="form-label">Couse Name: </label>
-        <input type="text" name="coursename" id="coursename" />
+        <input type="text" name="coursename" id="coursename" class="form-text form-control"/>
         <br />
       </form>
     </main>
