--- a/javascript/pizza_order_form/index.html
+++ b/javascript/pizza_order_form/index.html
@@ -4,63 +4,88 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>task 2</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
   </head>
   <body>
-    <h1>Pizza Order Form</h1>
-    <form>
-      <label for="firstname">First Name:</label>&nbsp;
-      <input type="text" id="fname" /><br />
-      <label for="lastname">Last Name:</label>&nbsp; <input type="text" id="lname"/><br />
-      <label for="email">Email Address:</label>&nbsp;
-      <input type="email" id="email"/><br />
-      <label for="contact">Contact Number:</label>&nbsp;
-      <input type="number" id="phone"/><br />
-      <label for="date">Preferred Delivery Date:</label>&nbsp;
-      <input type="date" id="date"/><br />
-      <label for="size">Size:</label><br />
-      <input type="radio" name="size" id="small" /><label for="small">Small</label>
-      <input type="radio" name="size" id="medium" /><label for="medium"
-        >Medium</label
-      >
-      <input type="radio" name="size" id="large" /><label for="large">Large</label>
-      <br />
-      <br />
-      <label for="flavor">Flavor:</label><br />
-      <input type="checkbox" /> Hawaiian (Php 150.00)
-      <select name="flavor" id="flavor">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-      </select>
-      <br />
-      <input type="checkbox" /> Pepperoni (Php 140.00)
-      <select name="flavor" id="flavor">
-        <option value="f1">1</option>
-        <option value="f2">2</option>
-        <option value="f3">3</option>
-        <option value="f4">4</option>
-      </select>
-      <br />
-      <input type="checkbox" /> Vegetable (Php 130.00)
-      <select name="flavor" id="vegflavor">
-        <option value="v1">1</option>
-        <option value="v2">2</option>
-        <option value="v3">3</option>
-        <option value="v4">4</option>
-      </select>
-      <br />
-      <label for="credit">Credit Card Number: </label>
-      <input type="number" id="credit"/>
-      <br />
-      <label for="pin">PIN: </label>
-      <input type="number" id="pin"/>
-      <br />
-      <label for="additional">Additional Note: </label><br />
-      <textarea rows="5" cols="" id="textarea"></textarea>
-      <br />
-      <br />
-      <button id="submit">Sumbit Order</button>
-    </form>
+    <header class="bg-primary bg-gradient" style="height: 50px">
+      <h1 class="text-light fs-2 text-center">Pizza Order Form</h1>
+    </header>
+    <main class="container mt-2 border border-dark rounded-3">
+      <form>
+        <label for="firstname" class="form-label">First Name:</label>&nbsp;
+        <input type="text" id="fname" class="form-text form-control w-25"/><br />
+        <label for="lastname">Last Name:</label>&nbsp;
+        <input type="text" id="lname" /><br />
+        <label for="email">Email Address:</label>&nbsp;
+        <input type="email" id="email" /><br />
+        <label for="contact">Contact Number:</label>&nbsp;
+        <input type="number" id="phone" /><br />
+        <label for="date">Preferred Delivery Date:</label>&nbsp;
+        <input type="date" id="date" /><br />
+        <label for="size">Size:</label><br />
+        <input type="radio" name="size" id="small" /><label for="small"
+          >Small</label
+        >
+        <input type="radio" name="size" id="medium" /><label for="medium"
+          >Medium</label
+        >
+        <input type="radio" name="size" id="large" /><label for="large"
+          >Large</label
+        >
+        <br />
+        <br />
+        <label for="flavor">Flavor:</label><br />
+        <input type="checkbox" /> Hawaiian (Php 150.00)
+        <select name="flavor" id="flavor">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+        </select>
+        <br />
+        <input type="checkbox" /> Pepperoni (Php 140.00)
+        <select name="flavor" id="flavor">
+          <option value="f1">1</option>
+          <option value="f2">2</option>
+          <option value="f3">3</option>
+          <option value="f4">4</option>
+        </select>
+        <br />
+        <input type="checkbox" /> Vegetable (Php 130.00)
+        <select name="flavor" id="vegflavor">
+          <option value="v1">1</option>
+          <option value="v2">2</option>
+          <option value="v3">3</option>
+          <option value="v4">4</option>
+        </select>
+        <br />
+        <label for="credit">Credit Card Number: </label>
+        <input type="number" id="credit" />
+        <br />
+        <label for="pin">PIN: </label>
+        <input type="number" id="pin" />
+        <br />
+        <label for="additional">Additional Note: </label><br />
+        <textarea rows="4" cols="30" id="textarea" class="form-control"></textarea>
+        <br />
+        <br />
+        <button type="button" id="submit">Sumbit Order</button>
+      </form>
+    </main>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
