update in form validation

--- a/javascript/weather_app/index.html
+++ b/javascript/weather_app/index.html
@@ -28,7 +28,7 @@
           Get Weather
         </button>
       </div>
-      <div id="wdata"></div>
+      <div id="wdata" class="d-flex justify-content-between"></div>
     </main>
     <script src="script.js"></script>
   </body>
