--- a/javascript/form_validation/index.html
+++ b/javascript/form_validation/index.html
@@ -27,12 +27,16 @@
         id="fullname"
         class="form-control form-text"
       />
+      <span class="text-danger fs-6 float-end Error" id="NameError"></span>
       <label for="mob" class="form-label">Mobile no: </label>
       <input type="number" name="mob" id="mob" class="form-control" />
+      <span class="text-danger fs-6 float-end Error" id="PhoneError"></span>
       <label for="em" class="form-label">Email: </label>
       <input type="email" name="em" id="em" class="form-control" />
+      <span class="text-danger fs-6 float-end Error" id="EmailError"></span>
       <label for="dob" class="form-label">Date of Birth: </label>
       <input type="date" name="dob" id="dob" class="form-control" />
+      <span class="text-danger fs-6 float-end Error" id="BirthError"></span>
       <button class="btn btn-success mt-2 mb-2" onclick="submit()">
         Submit
       </button>
